@@ -4,5 +4,7 @@ noinst_LIBRARIES = libdata_structure_layout_reportparts.a
 libdata_structure_layout_reportparts_a_SOURCES = layoutitem_groupby.h layoutitem_groupby.cc \
                               layoutitem_summary.h layoutitem_summary.cc \
                               layoutitem_fieldsummary.h layoutitem_fieldsummary.cc \
+                              layoutitem_header.h layoutitem_header.cc \
+                              layoutitem_footer.h layoutitem_footer.cc \
                               layoutitem_verticalgroup.h layoutitem_verticalgroup.cc
 
